# chronos

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS_ANALYSIS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  FINAL_STATUS.md  GIT_PUSH_SUMMARY.md  LICENSE  PROJECT_CLEANUP_SUMMARY.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  build.ps1  package-lock.json  package.json  rebuild.ps1  setup-and-build.sh  tsconfig.json
app/: README.md  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/analytics/: page.tsx
app/app/dex/: page.tsx
app/app/market/: page.tsx
app/app/orchestrator/: page.tsx
app/app/vaults/: page.tsx
app/components/dex/: InitializeMarketForm.tsx  PlaceOrderForm.tsx
app/components/market/: BidModal.tsx  CreateAuctionForm.tsx  MintSlotNFTForm.tsx
app/components/providers/: WalletProvider.tsx
app/components/ui/: Button.tsx  Card.tsx  ProgramStatus.tsx  WalletButton.tsx
docs/: CHRONOS_Whitepaper_FULL.html  README.md  TECHNICAL_WHITEPAPER.md
programs/chronos_dex/: Cargo.toml
programs/chronos_dex/src/: lib.rs
programs/chronos_market/: Cargo.toml
programs/chronos_market/src/: lib.rs
programs/chronos_orchestrator/: Cargo.toml
programs/chronos_orchestrator/src/: lib.rs
programs/chronos_vault/: Cargo.toml
scripts/: create-test-token.ts  deploy.sh  setup-vault-token-accounts.ts  setup-wallet.ts  verify-deployment.ts
sdk/: README.md  chronos-client.ts  raiku-mock.ts
simulations/: README.md  requirements.txt  run_simulations.py
simulations/notebooks/: 1_mev_impact_analysis.ipynb  2_slot_pricing_model.ipynb  3_vault_performance_analysis.ipynb
tests/: chronos-dex.ts  chronos-market.ts  chronos-orchestrator.ts  chronos-vault.ts
(+7 files in other folders)
