[workspace]
members = [
    "programs/chronos_vault",
    "programs/chronos_dex",
    "programs/chronos_market",
    "programs/chronos_orchestrator"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

