[package]
name = "chronos_dex"
version = "0.1.0"
description = "Deterministic Order Matching Engine with Zero MEV"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chronos_dex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

