[package]
name = "chronos_market"
version = "0.1.0"
description = "Blockspace Futures Market for trading slot reservations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chronos_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

