[package]
name = "chronos_orchestrator"
version = "0.1.0"
description = "Core coordination and Raiku integration layer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chronos_orchestrator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

